# oldp-de

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
oldp_de/: settings.py
oldp_de/assets/templates/: footer.html  header_countries.html
oldp_de/assets/templates/homepage/: index.html
oldp_de/courts_de/: apps.py
src/oldp_de/: settings.py
src/oldp_de/assets/templates/: footer.html
src/oldp_de/assets/templates/homepage/: index.html
src/oldp_de/courts_de/: apps.py
src/oldp_de/courts_de/data/: ecli.csv
src/oldp_de/courts_de/management/commands/: import_courts.py
